--- a/week4/Friday.tex
+++ b/week4/Friday.tex
@@ -3,22 +3,22 @@
 
 \section{Friday}\index{week4_Friday_lecture}
 \subsection{Linear Transformation}
-Start with a matrix $\bm A$. When multiplying $\bm A$ with a vector $\bm v$, it transform $\bm v$ to another vector $\bm{Av}$. Matrix multiplication $L(\bm v) = \bm{Av}$ gives a \emph{linear transformation}:
+We start with a matrix $\bm A$. When multiplying $\bm A$ with a vector $\bm v$, it essentially transforms $\bm v$ to another vector $\bm{Av}$. Matrix multiplication $L(\bm v) = \bm{Av}$ gives a \emph{linear transformation}:
 \begin{definition}[linear transformation]
 A transformation $L$ assigns an output $T(\bm v)$ to each inpout vector $\bm v$ in $\bm V$.\\
-The transformation is \emph{linear transformation} if it satisfies
+The transformation $L(\cdot)$ is siad to be a \emph{linear transformation} if it satisfies
 \[
 L(\alpha \bm v_1 + \beta \bm v_2)=\alpha L(\bm v_1)+\beta L(\bm v_2)
 \]
-for all vector $v_1,v_2$ and scalar $\alpha,\beta$.
+for all vectors $v_1,v_2$ and scalars $\alpha,\beta$.
 \end{definition}
 \emph{Key Observation:} If the input is $\bm v = \bm 0$, the output must be $L(\bm v) = \bm 0$.
 \subsubsection{The idea of linear transformation}
-Given linear transformation $L: \mathbb{R}^{n}\mapsto\mathbb{R}^{m}$, let's show that in order to study the output we only need to start from the \emph{basis} of our output: \\
-\enlargethispage{1cm}
-Assume the basis of $\mathbb{R}^{n}$ is $\{e_1,e_2,\dots,e_n\}$, where $L(e_i)=a_i\in\mathbb{R}^{m}$ for $i=1,\dots,n$.\\
-Notice that \emph{The rule of linearity extends to combinations of three vectors or $\bm n$ vectors.}\\
-Hence given any vector $\bm x=x_1e_1+x_2e_2+\dots+x_ne_n\in\mathbb{R}^{n}$, we express its transformation in matrix multiplication form:
+Given the linear transformation $L: \mathbb{R}^{n}\mapsto\mathbb{R}^{m}$, let's show that in order to study the output, it suffices to start from the \emph{basis} of our output: 
+
+Assume the basis of $\mathbb{R}^{n}$ is $\{e_1,e_2,\dots,e_n\}$, where $L(e_i)=a_i\in\mathbb{R}^{m}$ for $i=1,\dots,n$. \emph{The linearity of transformation extends to the combinations of $\bm n$ vectors.}
+
+Hence given any vector $\bm x=x_1e_1+x_2e_2+\dots+x_ne_n\in\mathbb{R}^{n}$, we can express its transformation in matrix multiplication form:
 \[
 \begin{aligned}
 L(\bm x) &= L(x_1e_1+x_2e_2+\dots+x_ne_n)\\
@@ -31,12 +31,13 @@ x_1\\x_2\\\dots\\x_n
 			 &= \bm{Ax}
 \end{aligned}
 \]
-where $\bm A$ is a $m\x n$ matrix with columns $a_1,\dots,a_n$.\newpage
+where $a_i:=L(e_i)$, and $\bm A$ is a $m\x n$ matrix with columns $a_1,\dots,a_n$.
 
 \subsubsection{Matrix defines linear transformation}
-Conversely, given $m\x n$ matrix $\bm A$, $L(\bm x) = \bm{Ax}$ defines a linear mapping. This is because matrix multiplication is also a lienar operator.\\
+Conversely, given $m\x n$ matrix $\bm A$, $L(\bm x) = \bm{Ax}$ defines a linear mapping. This is because matrix multiplication is also a linear operator.
+
 \begin{remark}
-Transformations have a new ``language''. For example, for nonlinear transformation, if there is \emph{no matrix}, we cannot talk about a \emph{column space}. But this idea could be rescued. We know the \textit{column space} consists of all outputs $\bm{Av}$, the \textit{nullspace} consists of all inputs for which $\bm{Av}=\bm 0$. We could translate those terms into ``range'' and ``kernel'':
+Transformations have a new ``language''. For example, for \textit{nonlinear} transformation, if there is \emph{no matrix}, we cannot talk about \emph{column space}. But this idea could be rescued. We know the \textit{column space} consists of all outputs $\bm{Av}$, the \textit{null space} consists of all inputs for which $\bm{Av}=\bm 0$. We could generalize those terms into ``range'' and ``kernel'':
 \end{remark}
 \begin{definition}[range]
 For a linear transformation $L:V\mapsto W$, the range (or image) of $L$ refers to the set of all outputs $T(\bm v)$, which is denoted as:
@@ -45,34 +46,39 @@ For a linear transformation $L:V\mapsto W$, the range (or image) of $L$ refers t
 \]
 Sometimes we also use notation $\im(L)$ to express the same thing.
 \end{definition}
-\emph{The range corresponds to column space}. If $L(\bm x)=\bm{Ax}$, we have $\Range(L)=\col(\bm A)$.
+\emph{The range corresponds to the column space}. If $L(\bm x)=\bm{Ax}$, we have $\Range(L)=\mathcal{C}(\bm A)$.
 \begin{definition}[kernel]
 The kernel of $L$ refers to the set of all inputs for which $L(\bm v)=\bm 0$, which is denoted as:
 \[
 \ker(L)=\{\bm x:L(\bm x)=\bm 0\}
 \]
 \end{definition}
-\emph{Kernel corresponds to nullspace}. If $L(\bm x)=\bm{Ax}$, we have $\ker(L)=N(\bm A)$.
+\emph{Kernel corresponds to the null space}. If $L(\bm x)=\bm{Ax}$, we have $\ker(L)=N(\bm A)$.
 \begin{remark}
 For linear transformation $L:\bm V\mapsto \bm W$, where $L(\bm x)=\bm{Ax}$. We have two rules:
 \[
+L(\cdot):\left\{
 \begin{aligned}
 N(\bm A)&\mapsto \{\bm 0\}\\
 \bm V&\mapsto \col(\bm A)
-\end{aligned}
+\end{aligned}\right.
 \]
 \end{remark}
 \subsection{Example: differentiation}
-\emph{Key idea of this section:}\\
-\hspace*{1cm}{\bfseries\textit{Suppose we know $L(\bm v_1),\dots,L(\bm v_n)$ for the basis vectors $\bm v_1,\dots,\bm v_n$,Then the linearity produces $L(\bm v)$ for every other input vector $\bm v$.}}\\
-\emph{Reason:} Every $\bm v$ is a unique combination $c_1\bm v_1+\dots+c_n\bm v_n$ of the basis vector $\bm v_i$. Suppose $L$ is a linear transformation, $L(\bm v)$ must be the \emph{same combination} $c_1L(\bm v_1)+\dots+c_nL(v_n)$ of the \emph{known outputs} $L(\bm v_i)$.\\\\
+\emph{Key idea of this section:}
+\begin{quotation}
+{\bfseries\textit{Suppose we know $L(\bm v_1),\dots,L(\bm v_n)$ for the basis vectors $\bm v_1,\dots,\bm v_n$,Then the linearity property produces $L(\bm v)$ for every other input vector $\bm v$}}
+\end{quotation}
+\emph{Reason:} Every $\bm v$ has a unique combination $c_1\bm v_1+\dots+c_n\bm v_n$ of the basis vector $\bm v_i$. Suppose $L$ is a linear transformation, then $L(\bm v)$ must be the \emph{same combination} $c_1L(\bm v_1)+\dots+c_nL(v_n)$ of the \emph{known outputs} $L(\bm v_i)$.
+
+\paragraph{Derivative is a linear transformation}
 The derivative of the functions $1,x,x^2,x^3$ are $0,1,2x,3x^2$. If we consider ``\emph{taking the derivative}'' as a transformation, whose inputs and outputs are functions, then we claim that the \emph{derivative transformation} is \emph{linear}:
 \[
 L(\bm v)=\frac{\diff \bm v}{\diff x}\qquad\text{obeys the linearity rule}\qquad\frac{\diff}{\diff x}(c\bm v+d\bm w) = c\frac{\diff \bm v}{\diff x}+d\frac{\diff \bm w}{\diff x}
 \]
-If we consider $1,x,x^2,x^3$ as vectors instead of functions, we notice they form a basis for the space $\bm V$ of \textit{polynomials with degree$\le 3$}. Find derivatives of these four basis tells us all derivatives in $\bm V$:
+If we consider $1,x,x^2,x^3$ as vectors instead of functions, we notice they form a basis for the space $\bm V:=\{\mbox{\textit{polynomials with degree$\le 3$}}\}.$ Find derivatives of these four basis tells us all derivatives in $\bm V$:
 \begin{example}
-Given any vector $\bm v$ in $\bm V$, it can be expressed as $\bm v=a+bx+cx^2+dx^3$. Thus we want to find the derivative transformation output for $\bm v$:
+Given any vector $\bm v$ in $\bm V$, it can be expressed as $\bm v=a+bx+cx^2+dx^3$. We want to find the derivative transformation output for $\bm v$:
 \[
 \begin{aligned}
 L(\bm v)&=aL(1)+bL(x)+cL(x^2)+dL(x^3)\\
@@ -80,16 +86,19 @@ L(\bm v)&=aL(1)+bL(x)+cL(x^2)+dL(x^3)\\
         &=b+2cx+3dx^2
 \end{aligned}
 \]
-Can we express this linear transformation $L$ by a matrix $\bm A$? The answer is \textit{Yes}:\\
-The derivative transforms the space $\bm V$ of cubics to the space $\bm W$ of quadratics. The basis for $\bm V$ is $1,x,x^2,x^3$. The basis for $\bm W$ is $1,x,x^2$. \textit{The derivative matrix is 3 by 4}:
+Can we express this linear transformation $L$ by a matrix $\bm A$? The answer is \textit{Yes}:
+
+The derivative transforms the space $\bm V$ of cubics to the space $\bm W$ of quadratics. The basis for $\bm V$ is $1,x,x^2,x^3$. The basis for $\bm W$ is $1,x,x^2$. It follows that \textit{The derivative matrix is 3 by 4}:
 \[
-\bm A= \begin{bmatrix}
+\bm A:= \begin{bmatrix}
 0&1&0&0\\0&0&2&0\\0&0&0&3
 \end{bmatrix}=\text{\emph{matrix form of derivative $L$}}.
 \]
-Why is $\bm A$ the correct matrix? Because \emph{multiplying by $\bm A$ agrees with transforming by $L$}. The derivative of $\bm v=a+bx+cx^2+dx^3$ is $L(\bm v)=b+2cx+3dx^2$. The same numbers $b$ and $2c$ and $3d$ appear when we multiply by matrix $\bm A$:
+Why do we define the derivative matrix? Because \emph{multiplying by $\bm A$ agrees with transforming by $L$}. The derivative of $\bm v=a+bx+cx^2+dx^3$ is $L(\bm v)=b+2cx+3dx^2$. The same numbers $b,2c,3d$ appear when we multiply by matrix $\bm A$:
 \[
-\textit{\emph{Take the derivative}}\qquad
+\begin{array}{ll}
+\mbox{\textit{\emph{Take the derivative}}}
+&
 \begin{bmatrix}
 0&1&0&0\\0&0&2&0\\0&0&0&3
 \end{bmatrix}\begin{bmatrix}
@@ -97,27 +106,35 @@ a\\b\\c\\d
 \end{bmatrix}=\begin{bmatrix}
 b\\2c\\3d
 \end{bmatrix}.
+\end{array}
 \]
 What does the matrix $\begin{bmatrix}
 a\\b\\c\\d
 \end{bmatrix}$ and $\begin{bmatrix}
 b\\2c\\3d
-\end{bmatrix}$ mean? \\It is the \emph{coordinate vector} of $\bm v$ and $L(\bm v)$. If we consider $a+bx+cx^2+dx^3$ as a vector, then it's better for us to study its coordinate vector $\begin{bmatrix}
+\end{bmatrix}$ mean? 
+
+It is the \emph{coordinate vector} of $\bm v$ and $L(\bm v)$. If we consider $a+bx+cx^2+dx^3$ as a vector, then it's better for us to study its corresponding coordinate vector $\begin{bmatrix}
 a\\b\\c\\d
-\end{bmatrix}$.\\ Hence taking derivative of $\bm v$ is the same as multiplying matrix $\bm A$ by its coordinate vector.
+\end{bmatrix}$.
+
+Hence, taking derivative of $\bm v$ is the same as multiplying matrix $\bm A$ by its coordinate vector.
 \end{example}
 
 
 
 \subsubsection{The inverse of the derivative.}
-The \emph{integral} is the inverse of the derivative. That is the Fundamental Theorem of Calculus. We see it now in linear Algebra. The integral transformation $L^{-1}$ that \textit{takes the integral from 0 to x} is linear! Applying $L^{-1}$ to $1,x,x^2$, which are $\bm w_1,\bm w_2,\bm w_3$:
+\paragraph{The \emph{integral} is the inverse of the derivative. } That is from the Fundamental Theorem of Calculus. We review it from the perspective of linear algebra. The integral transformation $L^{-1}$ that \textit{takes the integral from 0 to x} is also linear! Applying $L^{-1}$ to $1,x,x^2$, which are $\bm w_1,\bm w_2,\bm w_3$:
 \[
-\text{\emph{Integration is $L^{-1}$}}\qquad
+\mbox{\emph{Integration is $L^{-1}$}}\qquad
 \int_0^x1\diff x=x,\quad\int_0^xx\diff x=\frac{1}{2}x^2,\quad\int_0^xx^2\diff x=\frac{1}{3}x^3.
 \]
 By linearity, the integral of $\bm w=B+Cx+Dx^2$ is $L^{-1}(\bm w)=Bx+\frac{1}{2}Cx^2+\frac{1}{3}Dx^3$. The integral of a quadratic is a cubic. The input space of $L^{-1}$ is the quadratics, the output space is the cubics. \emph{Integration takes W back to V}. Integration matrix will be 4 by 3:
 \[
-\text{\emph{Take the integral}}\qquad\begin{bmatrix}
+\begin{array}{ll}
+\mbox{\emph{Take the integral}}
+&
+\begin{bmatrix}
 0&0&0\\1&0&0\\0&\frac{1}{2}&0\\0&0&\frac{1}{3}
 \end{bmatrix}
 \begin{bmatrix}
@@ -125,11 +142,11 @@ B\\C\\D
 \end{bmatrix}=\begin{bmatrix}
 0\\B\\\frac{1}{2}C\\\frac{1}{3}D
 \end{bmatrix}.
+\end{array}
 \]
-\enlargethispage{1cm}
-If our input is $\bm w=B+Cx+Dx^2$, our integral is $0+Bx+\frac{1}{2}Cx^2+\frac{1}{3}Dx^3$.
-\newpage
-Recall we have express derivative and integral as matrix:
+If our input is $\bm w=B+Cx+Dx^2$, our output integral is $0+Bx+\frac{1}{2}Cx^2+\frac{1}{3}Dx^3$.
+\paragraph{The derivative and the integration are essentially matrix multiplication}
+We have the corresponding derivative and integration matrix:
 \[
 \bm A=\begin{bmatrix}
 0&1&0&0\\0&0&2&0\\0&0&0&3
@@ -137,70 +154,80 @@ Recall we have express derivative and integral as matrix:
 0&0&0\\1&0&0\\0&\frac{1}{2}&0\\0&0&\frac{1}{3}
 \end{bmatrix}
 \]
-I want to call this matrix $\bm A^{-1}$, though rectangular matrices don't have inverses. We notice that $\bm A^{-1}$ is the \emph{right inverse} of matrix $\bm A$! (Do you remember the definition that shown in mid-term?)
+I want to call this matrix $\bm A^{-1}$, though rectangular matrices don't have inverses. Note that $\bm A^{-1}$ is the \emph{right inverse} of matrix $\bm A$! (Do you remember the definition that shown in mid-term?)
 \[
+\begin{array}{lll}
 \bm A\bm A^{-1}=\begin{bmatrix}
 1&0&0\\0&1&0\\0&0&1
-\end{bmatrix}\qquad\text{but}\qquad\bm A^{-1}\bm A=\begin{bmatrix}
+\end{bmatrix}
+&
+\mbox{but}
+&
+\bm A^{-1}\bm A=\begin{bmatrix}
 0&0&0&0\\0&1&0&0\\0&0&1&0\\0&0&0&1
 \end{bmatrix}.
+\end{array}
 \]
-This is reasonable. If you integrate a function and then differentiate, you get back to the start. Hence $\bm A\bm A^{-1}=\bm I$. But if you differentiate before integrating, the constant term is lost.\\ \emph{The integral of the derivative of 1 is zero}:
+This is reasonable. If you integrate a function and then differentiate, you get back to the start. Hence $\bm A\bm A^{-1}=\bm I$. But if you differentiate before integrating, the constant term is lost.
+
+\paragraph{The integral of the derivative of 1 is zero}
 \[
 L^{-1}L(1)=\text{integral of zero function}=0.
 \]
-\emph{Summary: }In this example, we want to take the derivative. Then we let $\bm V$ be a vector space of polynomials with degree $\le 3$. Then its basis is given by $E=\{1,x,x^2,x^3\}$. Any $v\in\bm V$ there is a unique linear combination of the basis vectors that equals to $v$:
+\paragraph{Summary:}
+In this example, we want to take the derivative. Then we let $\bm V$ be a vector space of polynomials with degree $\le 3$. Its basis is given by $E=\{1,x,x^2,x^3\}$. Any $v\in\bm V$ there is a unique linear combination of the basis vectors that equals to $v$:
 \[
 v=a+bx+cx^2+dx^3
 \]
-We write the coordinate vector of $v$ relative to $E$:
+We write the coordinate vector of $v$ w.r.t. to $E$:
 \[
 [v]_{E}=\begin{bmatrix}
 a\\b\\c\\d
 \end{bmatrix}
 \]
-Then we postmultiply $\bm A$ by $[v]_{E}$ to get the coordinate vector of output space:
+Then we postmultiply $\bm A$ by $[v]_{E}$ to get the corresponding coordinate vector of output space:
 \[
 [L(v)]_{F}=\bm A[v]_{E}
 \]
-where $F=\{1,x,x^2\}$.\\
-Here we give the formal definition for coordinate vector:
-\enlargethispage{2cm}
+where $F=\{1,x,x^2\}$.
+
+Here we give the formal definition for the coordinate vector:
 \begin{definition}[coordinate vector]
 Let $\bm V$ be a vector space of dimension $n$ and let $B=\{v_1,v_2,\dots,v_n\}$ be an \emph{ordered} basis for $\bm V$. Then for any $v\in\bm V$ there is a unique linear combination of the basis vectors such that
 \[
 v=\alpha_1v_1+\alpha_2v_2+\dots+\alpha_nv_n
 \]
-where $\alpha_1,\dots,\alpha_n$ are scalars.\\
-The \emph{coordinate vector} of $v$ relative to $B$ is given by
+where $\alpha_1,\dots,\alpha_n$ are scalars.
+
+The \emph{coordinate vector} of $v$ w.r.t. to $B$ is defined by
 \[
 [v]_{B}=\begin{bmatrix}
 \alpha_1\\\vdots\\\alpha_n
 \end{bmatrix}
 \]
-Hence vector $v$ could be expressed as:
+Hence, vector $v$ could be expressed as:
 $
 v=\begin{bmatrix}
 v_1&v_2&\dots&v_n
 \end{bmatrix}\x [v]_{B}.
 $
 \end{definition}
-\newpage
-Also, there follows a theorem which is easy to verify:
+More specifically, the linear transformation of vectors is essentially the matrix multiplication of the corresponding coordinate vectors:
 \begin{theorem}
 Let $E=\{v_1,\dots,v_n\}$ be a basis for $\bm V$; $F=\{w_1,\dots,w_m\}$ be a basis for $\bm W$. Given linear transformation $L:\bm V\mapsto \bm W$, for any vector $v\in\bm V$, there exists $m\x n$ matrix $\bm A$ such that
 \[
 [L(v)]_F=\bm A[v]_E
 \]
 \end{theorem}
-And there is a corollary that is more commonly useful:
+If we let $\bm W=\bm V$, then we obtain a more commonly useful corollary:
 \begin{corollary}\label{matrix_representation}
-Given linear transformation $L:\bm V\mapsto \bm V$. We set $E = \{\alpha_1,\dots,\alpha_n\}$ to be its basis. Then given any vector $v$, there exists $n\x n$ matrix $\bm A$ such that
+Given linear transformation $L:\bm V\mapsto \bm V$. We set $E = \{\alpha_1,\dots,\alpha_n\}$ to be the basis of $\bm V$. Then given any vector $v$, there exists $n\x n$ matrix $\bm A$ such that
 \[
 [L(v)]_{E}=\bm A[v]_{E}
 \]
 \end{corollary}
 \subsection{Basis Change}
+\paragraph{Basis Change is essentially matrix multiplication}
 Suppose $L:\bm V\mapsto \bm V$. $E=\{v_1,\dots,v_n\}$ is a basis for $\bm V$, $F=\{u_1,\dots,u_n\}$ is another basis for $\bm V$. Then vector $u_1,\dots,u_n$ could be expressed by vectors $v_1,\dots,v_n$. So we set
 \[
 \begin{aligned}
@@ -227,18 +254,20 @@ You should \emph{prove it by yourself} that $\bm S$ is invertible. Hence we have
 \begin{equation}\label{basis_change_formula_inverse}
 (u_1,\dots,u_n)\bm S^{-1}=(v_1,\dots,v_n).
 \end{equation}
-Given any vector $x\in\bm V$, we want to study its transformation relative to its coordinate vector. In other words, we want to study the relationship between $L(x)$ and $[x]_{F}$:
-\[
+\paragraph{We can express linear transformation in terms of different basis}
+Given any vector $x\in\bm V$, we want to study the relationship between $L(x)$ and $[x]_{F}$:
+\begin{equation}
 \begin{aligned}
 L(x)  	&=	\begin{bmatrix}v_1&v_2&\dots&v_n\end{bmatrix}\x [L(x)]_{E}\\
 	    	&= \begin{bmatrix}v_1&v_2&\dots&v_n\end{bmatrix}\x (\bm A[x]_{E})\qquad\text{$\leftarrow$ due to corollary (\ref{matrix_representation})}
 	    	\\
 	    	&= \begin{bmatrix}u_1&u_2&\dots&u_n\end{bmatrix}\bm S^{-1}\x (\bm A[x]_{E})\\
-\end{aligned}
-\]
+\end{aligned}\label{Eq:5:3}
+\end{equation}
 \begin{itemize}
 \item
-And we claim that $[x]_{E}=\bm S[x]_{F}$:\\
+We claim that $[x]_{E}=\bm S[x]_{F}$:
+
 For any vector $x\in\bm V$, we obtain:
 \[
 \begin{aligned}
@@ -249,50 +278,72 @@ x &=\begin{bmatrix}v_1&v_2&\dots&v_n\end{bmatrix}\x [x]_{E}\\
 \]
 Hence $[x]_{E}=\bm S[x]_{F}$.
 \end{itemize}
-Hence $L(x)$ could be expressed as:
+
+Substituting $[x]_{E}=\bm S[x]_{F}$ into Eq.(\ref{Eq:5:3}), we obtain:
 \[
-L(x)=
-\begin{bmatrix}u_1&u_2&\dots&u_n\end{bmatrix}\bm S^{-1}\x (\bm A\bm S[x]_{F})=\begin{bmatrix}u_1&u_2&\dots&u_n\end{bmatrix}\bm S^{-1}\bm A\bm S[x]_{F}
+L(x)=\begin{bmatrix}u_1&u_2&\dots&u_n\end{bmatrix}\bm S^{-1}\bm A\bm S[x]_{F}
 \]
 What do the following process mean? We know that given basis $E=\{v_1,\dots,v_n\}$, performing linear transformation on any vector $x$ is just the same as matrix multiplication:
 \[
 L(x)=\begin{bmatrix}v_1&v_2&\dots&v_n\end{bmatrix}\x \bm A[x]_{E}
 \]
-But what about changing another basis $F=\{u_1,\dots,u_n\}$? Do we still mutliply the same matrix $\bm A$? The answer is no! We must change $\bm A$ into $\bm S^{-1}\bm A\bm S$:
+
+In summary, 
+\begin{enumerate}
+\item
+The linear transformation is essentially postmultiplying matrix for the coordiante vector:
 \[
-L(x)=\begin{bmatrix}u_1&u_2&\dots&u_n\end{bmatrix}\bm S^{-1}\bm A\bm S[x]_{F}
+\begin{array}{lll}
+x =\begin{bmatrix}v_1&v_2&\dots&v_n\end{bmatrix}\x [x]_{E}
+&
+\implies
+&
+L(x)=\begin{bmatrix}v_1&v_2&\dots&v_n\end{bmatrix}\x \bm A[x]_{E}
+\end{array}
 \]
-We give a definition for such phenomenon:
+\item
+If we change another basis $F=\{u_1,\dots,u_n\}$, we must change $\bm A$ into $\bm S^{-1}\bm A\bm S$:
+\[
+\begin{array}{lll}
+x =\begin{bmatrix}u_1&u_2&\dots&u_n\end{bmatrix}\x [x]_{F}
+&
+\implies
+&
+L(x)=\begin{bmatrix}u_1&u_2&\dots&u_n\end{bmatrix}\x \bm S^{-1}\bm A\bm S[x]_{F}
+\end{array}
+\]
+\end{enumerate}
+It suffices to define $\bm B:=\bm S^{-1}\bm A\bm S$, The matrix $\bm B$ is said to be \emph{similar} to $\bm A$.
 \begin{definition}[Similar]
 Let $\bm A,\bm B$ be $n\x n$ matrix. If there exists invertible $n\x n$ matrix $\bm S$ such that $\bm B=\bm S^{-1}\bm A\bm S$, then we say that $\bm A$ is \emph{similar} to $\bm B$.
 \end{definition}
 \subsection{Determinant}
-The determinat of a square matrix is a single number, which contains an amazing amount of information about the matrix. It has four major uses:
-\begin{itemize}
-\item
-\emph{The determinant is zero if and only if the matrix has no inverse}.
-\item
-\emph{It can be used to calculate the area or volumn of a box:}
-\begin{figure}[H]\centering
-\includegraphics[width=5cm]{week4/calculus}
+The determinat of a \emph{square matrix} is a single number, which contains many amazing amount of information about the matrix. It has four major uses:
+\paragraph{The determinant is zero if and only if the matrix has no inverse}
+\paragraph{It can be used to calculate the area or volumn of a box} $|\det(\bm A)|$ is the volume of the parallelepiped $\mathcal{P}=\{y=\sum_{i=1}^m\alpha_i\bm a_i\mid \alpha_i\in[0,1]\}$:
+\begin{figure}[H]
+\centering
+\includegraphics[width=6cm]{week4/F_1.png}
+\caption{The parallelepiped $\mathcal{P}=\{y=\sum_{i=1}^3\alpha_i\bm a_i\mid \alpha_i\in[0,1]\}$, where $r_1,r_2,r_3$ are $\bm a_1,\bm a_2,\bm a_3$ on $\mathbb{R}^3$}
 \end{figure}
-For example, suppose that $\bm u=u_1\bm i+u_2\bm j+u_3\bm k,\bm v=v_1\bm i+v_2\bm j+v_3\bm k$. In order to compute the area of the parallelogram determined by $\bm u$ and $\bm v$, we just need to compute the determinant
-$\begin{vmatrix}
-\bm i&\bm j&\bm k\\u_1&u_2&u_3\\v_1&v_2&v_3
-\end{vmatrix}$.
-\item
-\emph{The product of all the pivots $=(\pm 1)\x$the determinant:}\\
+\paragraph{The product of all the pivots $=(\pm 1)\x$the determinant}
+
 For a 2 by 2 matrix $\bm A=\begin{bmatrix}
 a&b\\c&d
 \end{bmatrix}$, the pivots are $a$ and $d-(\frac{c}{a})b$. The product of pivots is the determinant:
 \[
-\text{\emph{Product of pivots}}\qquad a(d-\frac{c}{a}b)=ad-bc\qquad\text{\emph{which is}}\quad \text{det }\bm A
+\begin{array}{lll}
+\mbox{\emph{Product of pivots}}
+&
+a(d-\frac{c}{a}b)=ad-bc
+&
+\mbox{\emph{which is} $\det\bm A$}
+\end{array}
 \]
-\item
-\emph{Compute determinants to find $\bm A^{-1}$ and $\bm A^{-1}\bm b$} (This formula is called \emph{Cramer's Rule}.)
-\end{itemize}
+\paragraph{Compute determinants to find $\bm A^{-1}$ and $\bm A^{-1}\bm b$} (Cramer's Rule).
+
 \subsubsection{The properties of the Determinant}
-We don't intend to define the determinant by its formulas. It's better to start with its properties. These properties are simple, but they prepare for the formulas.
+We don't intend to define the determinant directly by its formulas. It's better to start with its properties. These properties are simple, but they prepare for the formulas.
 \begin{remark}
 Brackets for the matrix, straight bars for its determinant. For example,
 \[
@@ -301,10 +352,10 @@ a&b\\c&d
 \end{bmatrix} \text{ is } \begin{vmatrix}
 a&b\\c&d\end{vmatrix}=ad-bc
 \]
-The determinant is written in two ways, det $\bm A$ and $|\bm A|$.
+The determinant is written in two ways, det $\bm A$ or $|\bm A|$.
 \end{remark}
-We will introduce three basic properties, then we will show how properties $1-3$ derive other properties.\\
 
+We will introduce three basic properties, then we will show how properties $1-3$ derive other properties.
 \begin{enumerate}
 \item
 \emph{The determinant of the $\bm n$ by $\bm n$ identity matrix is 1.}
@@ -325,8 +376,14 @@ We will introduce three basic properties, then we will show how properties $1-3$
 \begin{gather*}
 \text{\emph{Add row 1 of $\bm A$ to row 1 of $\bm B$:}}\qquad\begin{vmatrix}a_1+a_2&b_1+b_2\\c&d\end{vmatrix}=\begin{vmatrix}a_1&b_1\\c&d\end{vmatrix}+\begin{vmatrix}a_2&b_2\\c&d\end{vmatrix}
 \end{gather*}
-Note that this rule \emph{deos not} mean $\det (\bm A+\bm B)=\det \bm A+\det\bm B$.\\ Note that this rule \emph{does not} mean $\det(t\bm A)=t\det(\bm A)$. \\Actually, $\det(t\bm A)=t^n\det \bm A$. This is reasonable. Imagining that expanding a rectangle by 2, its area will increase by 4. Expand an $n-$dimensional box by $t$ and its volumn will increase by $t^n$.\\
-Pay special attention to property $1-3$. They completely determine the $\det\bm A$. We could stop here to find a formula for determinants. But we prefer to derive other properties that follow directly from the first three.
+
+Note that this rule \emph{deos not} mean $\det (\bm A+\bm B)=\det \bm A+\det\bm B$.
+
+Note that this rule \emph{does not} mean $\det(t\bm A)=t\det(\bm A)$.
+
+Actually, $\det(t\bm A)=t^n\det \bm A$. This is reasonable. Imagining that expanding a rectangle by 2, its area will increase by 4. Expand an $n-$dimensional box by $t$ and its volumn will increase by $t^n$.
+
+Pay special attention to property $1\sim 3$. They completely determine the $\det\bm A$. We could stop here to find a formula for determinants. But before that we prefer to derive other properties that follow directly from the first three:
 \item
 \emph{If two rows of $\bm A$ are equal, then $\det\bm A=\bm0$.}
 \begin{gather*}
@@ -344,8 +401,7 @@ Property 4 follows from Property 2.
 \begin{vmatrix}a&b\\c&d\end{vmatrix}+\begin{vmatrix}lc&ld\\c&d\end{vmatrix}=\begin{vmatrix}a&b\\c&d\end{vmatrix}+l\begin{vmatrix}c&d\\c&d\end{vmatrix}=
 \begin{vmatrix}a&b\\c&d\end{vmatrix}=\det\bm A
 \]
-\emph{Conclusion }\textit{The determinant is not changed by the usual elimination step from $\bm A$ to $\bm U$}. Since every row exchange reverses the sign, we have $\det\bm A=\pm\det\bm U$.
-\newpage
+\emph{Conclusion: }\textit{The determinant is not changed by the usual elimination step from $\bm A$ to $\bm U$}. Since every row exchange reverses the sign, we have $\det\bm A=\pm\det\bm U$.
 \item
 \emph{If $\bm A$ is triangular, then $\det\bm A=$ product of diagonal entries}.
 \begin{gather*}
@@ -370,7 +426,7 @@ Suppose $|\bm B|$ is not zero, and $\bm A,\bm B$ is $n\x n$ matrix. Consider the
 \emph{Property 2  }\textit{(Sign reversal)}\quad When two rows of $\bm A$ are exchanged, the same two rows of $\bm{AB}$ are also exchanged. Therefore $|\bm{AB}|$ changes sign and so does the ratio $\frac{|\bm{AB}|}{\bm B}$.\\\\
 \emph{Property 3  }\textit{(Linearity)}\quad When row 1 of $\bm A$ is multiplied by $t$, so is row 1 of $\bm{AB}$. Thus the ratio is also increased by $t$. Thus we still have $|\bm A|=\frac{|\bm{AB}|}{\bm B}$.\\
 If we Add row 1 of $\bm A_1$ to row 1 of $\bm A_2$. Then row 1 of $\bm A_1\bm B$ also adds to row 1 of $A_2B$. By property three, determinants add. After dividing by $|\bm B|$, the ratios add. Hence we still have $|\bm A|=\frac{|\bm{AB}|}{\bm B}$.\\\\
-\textit{Conclusion}\qquad The ratio $D(\bm A)$ has the same three properties that defines determinant, hence it equals $|\bm A|$. Hence we obtain the product rule $|\bm{AB}|=|\bm A||\bm B|$.\\
+\textit{Conclusion: }The ratio $D(\bm A)$ has the same three properties that defines determinant, hence it equals $|\bm A|$. Hence we obtain the product rule $|\bm{AB}|=|\bm A||\bm B|$.\\
 \end{itemize}
 \end{proof}
 
